cp: 	PR c++/19891 	* class.c (build_simple_base_path): Build the component_ref 	directly. 	(update_vtable_entry_for_fn): Walk the covariant's binfo chain 	rather than using lookup_base. 	* search.c (dfs_walk_once): Add non-recursive assert check. 	* typeck.c (build_class_member_access_expr): It is possible for 	the member type to be both const and volatile. testsuite: 	PR c++/19891 	* g++.dg/abi/covariant4.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@95005 138bc75d-0d04-0410-961f-82ee72b054a4